--- a/po/cs.po
+++ b/po/cs.po
@@ -2,19 +2,19 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the libfm package.
 # Radek Tříška <radek@fastlinux.eu>, 2010.
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: Libfm\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-10-27 06:12+0000\n"
+"POT-Creation-Date: 2011-02-15 09:19+0100\n"
 "PO-Revision-Date: 2010-04-02 00:38+0100\n"
 "Last-Translator: Radek Tříška <radek@fastlinux.eu>\n"
 "Language-Team: Czech <radek@fastlinux.eu>\n"
+"Language: cs\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: cs\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
 
 #: ../data/ui/app-chooser.glade.h:1
@@ -266,12 +266,18 @@ msgid "System Applications"
 msgstr "Systémové aplikace"
 
 #: ../data/ui/preferred-apps.glade.h:8
-msgid "The preferred Mail Client will be used to compose emails when you click on E-mail addresses."
-msgstr "Při kliknutí na emailové adresy bude pro psaní zprávy použit preferovaný emailový klient."
+msgid ""
+"The preferred Mail Client will be used to compose emails when you click on E-"
+"mail addresses."
+msgstr ""
+"Při kliknutí na emailové adresy bude pro psaní zprávy použit preferovaný "
+"emailový klient."
 
 #: ../data/ui/preferred-apps.glade.h:9
 msgid "The preferred Web Browser will be used to open hyperlinks."
-msgstr "Při kliknutí na hyperlink odkazy bude pro otevření použit preferovaný WWW prohlížeč. "
+msgstr ""
+"Při kliknutí na hyperlink odkazy bude pro otevření použit preferovaný WWW "
+"prohlížeč. "
 
 #: ../data/ui/exec-file.glade.h:1
 msgid "Execute File"
@@ -281,7 +287,7 @@ msgstr "Spustit soubor"
 msgid "Execute in _Terminal"
 msgstr "Spustit v _terminálu"
 
-#: ../src/base/fm-utils.c:54 ../src/base/fm-utils.c:83
+#: ../src/base/fm-utils.c:55 ../src/base/fm-utils.c:84
 #, c-format
 msgid "%u byte"
 msgid_plural "%u bytes"
@@ -289,35 +295,35 @@ msgstr[0] "%u bajt "
 msgstr[1] "%u bajty"
 msgstr[2] "%u bajtů"
 
-#: ../src/base/fm-utils.c:61
+#: ../src/base/fm-utils.c:62
 msgid "KB"
 msgstr "KB"
 
-#: ../src/base/fm-utils.c:66
+#: ../src/base/fm-utils.c:67
 msgid "MB"
 msgstr "MB"
 
-#: ../src/base/fm-utils.c:71
+#: ../src/base/fm-utils.c:72
 msgid "GB"
 msgstr "GB"
 
-#: ../src/base/fm-utils.c:76
+#: ../src/base/fm-utils.c:77
 msgid "TB"
 msgstr "TB"
 
-#: ../src/base/fm-utils.c:90
+#: ../src/base/fm-utils.c:91
 msgid "KiB"
 msgstr "KiB"
 
-#: ../src/base/fm-utils.c:95
+#: ../src/base/fm-utils.c:96
 msgid "MiB"
 msgstr "MiB"
 
-#: ../src/base/fm-utils.c:100
+#: ../src/base/fm-utils.c:101
 msgid "GiB"
 msgstr "GiB"
 
-#: ../src/base/fm-utils.c:105
+#: ../src/base/fm-utils.c:106
 msgid "TiB"
 msgstr "TiB"
 
@@ -387,10 +393,12 @@ msgstr "Dokončeno"
 
 #: ../src/gtk/fm-progress-dlg.c:336
 msgid ""
-"Some files cannot be moved to trash can because the underlying file systems don't support this operation.\n"
+"Some files cannot be moved to trash can because the underlying file systems "
+"don't support this operation.\n"
 "Do you want to delete them instead?"
 msgstr ""
-"Některé soubory nelze přesunout do koše, protože podkladový souborový systém tuto operaci nepodporuje.\n"
+"Některé soubory nelze přesunout do koše, protože podkladový souborový systém "
+"tuto operaci nepodporuje.\n"
 "Chcete je trvale odstranit?"
 
 #: ../src/gtk/fm-progress-dlg.c:430
@@ -437,7 +445,8 @@ msgid "Please enter a valid group name or numeric id."
 msgstr "Prosím zadejte platné jméno nebo číselné id skupiny."
 
 #: ../src/gtk/fm-file-properties.c:356
-msgid "Do you want to recursively apply these changes to all files and sub-folders?"
+msgid ""
+"Do you want to recursively apply these changes to all files and sub-folders?"
 msgstr "Chcete rekurzivně použít tyto změny pro všechny soubory a pod-složky?"
 
 #: ../src/gtk/fm-file-properties.c:630
@@ -581,7 +590,7 @@ msgstr "Prosím zadejte nový název:"
 msgid "Are you sure you want to empty the trash can?"
 msgstr "Skutečně chcete vyprázdnit složku koše?"
 
-#: ../src/gtk/fm-gtk-file-launcher.c:86
+#: ../src/gtk/fm-gtk-file-launcher.c:115
 #, c-format
 msgid ""
 "This text file '%s' seems to be an executable script.\n"
@@ -590,7 +599,7 @@ msgstr ""
 "Textový soubor '%s' vypadá jako spustitelný skript.\n"
 "Co s ním budete dělat?"
 
-#: ../src/gtk/fm-gtk-file-launcher.c:93
+#: ../src/gtk/fm-gtk-file-launcher.c:122
 #, c-format
 msgid "This file '%s' is executable. Do you want to execute it?"
 msgstr "Soubor '%s' je spustitelný.  Chcete jej spustit?"
@@ -625,8 +634,7 @@ msgstr "Koš"
 msgid "Desktop"
 msgstr "Pracovní plocha"
 
-#. Translator: The word "blank" is used as an adjective, e.g. we are
-#. decsribing discs that are already blank
+#. Translator: The word "blank" is used as an adjective, e.g. we are decsribing discs that are already blank
 #: ../src/udisks/g-udisks-device.c:41
 msgid "CD-ROM Disc"
 msgstr "Disk CD-ROM"
