--- a/po/de.po
+++ b/po/de.po
@@ -2,19 +2,19 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: libfm 0.1.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-10-25 06:13+0000\n"
+"POT-Creation-Date: 2011-02-15 09:19+0100\n"
 "PO-Revision-Date: 2010-04-13 20:19+0100\n"
 "Last-Translator: Lutz Thuns <lOtz1009@opensuse.org>\n"
 "Language-Team: German\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: \n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Poedit-Language: German\n"
 
@@ -185,7 +185,9 @@ msgstr "Vorgänge, die der Besitzer der Datei ausführen kann"
 
 #: ../data/ui/file-prop.glade.h:21
 msgid "Operations that users in the same group as the owner of the file can do"
-msgstr "Vorgänge, die die Benutzer in der gleichen Gruppe wie der Besitzer ausführen können"
+msgstr ""
+"Vorgänge, die die Benutzer in der gleichen Gruppe wie der Besitzer ausführen "
+"können"
 
 #: ../data/ui/file-prop.glade.h:22
 msgid "Read and Write"
@@ -267,8 +269,12 @@ msgid "System Applications"
 msgstr "Installierte Anwendungen"
 
 #: ../data/ui/preferred-apps.glade.h:8
-msgid "The preferred Mail Client will be used to compose emails when you click on E-mail addresses."
-msgstr "Der bevorzugte Email-Client wird zum Verfassen von Nachrichten benutzt, wenn Sie auf E-Mail Adressen klicken."
+msgid ""
+"The preferred Mail Client will be used to compose emails when you click on E-"
+"mail addresses."
+msgstr ""
+"Der bevorzugte Email-Client wird zum Verfassen von Nachrichten benutzt, wenn "
+"Sie auf E-Mail Adressen klicken."
 
 #: ../data/ui/preferred-apps.glade.h:9
 msgid "The preferred Web Browser will be used to open hyperlinks."
@@ -282,42 +288,42 @@ msgstr "Datei ausführen"
 msgid "Execute in _Terminal"
 msgstr "Im Terminal ausführen"
 
-#: ../src/base/fm-utils.c:54 ../src/base/fm-utils.c:83
+#: ../src/base/fm-utils.c:55 ../src/base/fm-utils.c:84
 #, c-format
 msgid "%u byte"
 msgid_plural "%u bytes"
 msgstr[0] "%u Byte"
 msgstr[1] "%u Bytes"
 
-#: ../src/base/fm-utils.c:61
+#: ../src/base/fm-utils.c:62
 msgid "KB"
 msgstr "KB"
 
-#: ../src/base/fm-utils.c:66
+#: ../src/base/fm-utils.c:67
 msgid "MB"
 msgstr "MB"
 
-#: ../src/base/fm-utils.c:71
+#: ../src/base/fm-utils.c:72
 msgid "GB"
 msgstr "GB"
 
-#: ../src/base/fm-utils.c:76
+#: ../src/base/fm-utils.c:77
 msgid "TB"
 msgstr "TB"
 
-#: ../src/base/fm-utils.c:90
+#: ../src/base/fm-utils.c:91
 msgid "KiB"
 msgstr "KiB"
 
-#: ../src/base/fm-utils.c:95
+#: ../src/base/fm-utils.c:96
 msgid "MiB"
 msgstr "MiB"
 
-#: ../src/base/fm-utils.c:100
+#: ../src/base/fm-utils.c:101
 msgid "GiB"
 msgstr "GiB"
 
-#: ../src/base/fm-utils.c:105
+#: ../src/base/fm-utils.c:106
 msgid "TiB"
 msgstr "TiB"
 
@@ -387,10 +393,12 @@ msgstr "Beendet"
 
 #: ../src/gtk/fm-progress-dlg.c:336
 msgid ""
-"Some files cannot be moved to trash can because the underlying file systems don't support this operation.\n"
+"Some files cannot be moved to trash can because the underlying file systems "
+"don't support this operation.\n"
 "Do you want to delete them instead?"
 msgstr ""
-"Einige Dateien können nicht in den Papierkorb verschoben werden, da die zugrundeliegenden Dateisysteme den Vorgang nicht unterstützen.\n"
+"Einige Dateien können nicht in den Papierkorb verschoben werden, da die "
+"zugrundeliegenden Dateisysteme den Vorgang nicht unterstützen.\n"
 "Sollen die Dateien stattdessen gelöscht werden?"
 
 #: ../src/gtk/fm-progress-dlg.c:430
@@ -438,8 +446,11 @@ msgstr "Bitte gültigen Gruppennamen oder numerische ID eingeben."
 
 # Direkte Anrede: Wollen Sie... ????
 #: ../src/gtk/fm-file-properties.c:356
-msgid "Do you want to recursively apply these changes to all files and sub-folders?"
-msgstr "Sollen diese Änderungen rekursiv auf alle Dateien und Unterordner angewendet werden?"
+msgid ""
+"Do you want to recursively apply these changes to all files and sub-folders?"
+msgstr ""
+"Sollen diese Änderungen rekursiv auf alle Dateien und Unterordner angewendet "
+"werden?"
 
 #: ../src/gtk/fm-file-properties.c:630
 msgid "Files of different types"
@@ -584,8 +595,8 @@ msgstr "Neuen Namen eingeben:"
 msgid "Are you sure you want to empty the trash can?"
 msgstr "Sind Sie sicher, dass Sie den Papierkorb leeren möchten?"
 
-#: ../src/gtk/fm-gtk-file-launcher.c:86
-#, c-format, fuzzy
+#: ../src/gtk/fm-gtk-file-launcher.c:115
+#, fuzzy, c-format
 msgid ""
 "This text file '%s' seems to be an executable script.\n"
 "What do you want to do with it?"
@@ -593,8 +604,8 @@ msgstr ""
 "Die Textdatei »%s« scheint ausführbar zu sein.\n"
 "Was möchten Sie damit tun?"
 
-#: ../src/gtk/fm-gtk-file-launcher.c:93
-#, c-format, fuzzy
+#: ../src/gtk/fm-gtk-file-launcher.c:122
+#, fuzzy, c-format
 msgid "This file '%s' is executable. Do you want to execute it?"
 msgstr "Die Datei »%s« ist ausführbar. Möchten Sie diese ausführen?"
 
@@ -628,8 +639,7 @@ msgstr "Papierkorb"
 msgid "Desktop"
 msgstr "Desktop"
 
-#. Translator: The word "blank" is used as an adjective, e.g. we are
-#. decsribing discs that are already blank
+#. Translator: The word "blank" is used as an adjective, e.g. we are decsribing discs that are already blank
 #: ../src/udisks/g-udisks-device.c:41
 msgid "CD-ROM Disc"
 msgstr "CD-ROM-Medium"
