--- a/po/hr.po
+++ b/po/hr.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: libfm\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-02-15 09:19+0100\n"
-"PO-Revision-Date: 2011-01-05 13:04+0200\n"
+"PO-Revision-Date: 2011-02-23 00:18+0200\n"
 "Last-Translator: zvacet <ikoli@yahoo.com>\n"
 "Language-Team: Croatian (hr) <>\n"
 "Language: hr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%"
+"10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Generator: Pootle 2.0.5\n"
 
 #: ../data/ui/app-chooser.glade.h:1
@@ -37,10 +37,10 @@ msgid ""
 "  <b>%U</b>: Represents multiple URIs"
 msgstr ""
 "<b>Ovi posebni kodovi mogu biti korišteni u naredbenom retku:</b>\n"
-"<b>%f</b>:predstavljaju jedno ime datoteke\n"
-"<b>%F</b>: predstavljaju višestruka imena datoteka\n"
-"<b>%u</b>: predstavljaju jedan URI datoteke\n"
-"<b>%U</b>: predstavljaju višestruke URI-je"
+"  <b>%f</b>: predstavljaju jedno ime datoteke\n"
+"  <b>%F</b>: predstavljaju višestruka imena datoteka\n"
+"  <b>%u</b>: predstavljaju jedan URI datoteke\n"
+"  <b>%U</b>: predstavljaju višestruke URI-je"
 
 #: ../data/ui/app-chooser.glade.h:9
 msgid "Choose An Application"
@@ -383,7 +383,7 @@ msgstr "Otkazano"
 
 #: ../src/gtk/fm-progress-dlg.c:316
 msgid "The file operation is finished, but there are some errors."
-msgstr "Datotečna operacije je završena,ali ima grešaka."
+msgstr "Datotečna operacije je završena, ali ima grešaka."
 
 #: ../src/gtk/fm-progress-dlg.c:318
 msgid "Finished"
@@ -600,7 +600,7 @@ msgstr ""
 #: ../src/gtk/fm-gtk-file-launcher.c:122
 #, c-format
 msgid "This file '%s' is executable. Do you want to execute it?"
-msgstr "Ova datoteka '%s' je izvršna.Želite li je izvršiti?"
+msgstr "Ova datoteka '%s' je izvršna. Želite li je izvršiti?"
 
 #: ../src/job/fm-dir-list-job.c:231 ../src/job/fm-dir-list-job.c:240
 #: ../src/job/fm-dir-list-job.c:337
