Commit from LXDE Translation Project with Pootle by user knedlyk.: 179 of 179 messages translated (0 fuzzy).

--- a/po/uk.po
+++ b/po/uk.po
@@ -7,15 +7,15 @@ msgstr ""
 "Project-Id-Version: lxfm\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-02-15 09:19+0100\n"
-"PO-Revision-Date: 2010-12-12 01:05+0200\n"
+"PO-Revision-Date: 2011-05-06 10:32+0200\n"
 "Last-Translator: Y P <yupadmin@gmail.com>\n"
 "Language-Team: Ukrainian <translation@linux.org.ua>\n"
 "Language: uk\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%"
+"10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Generator: Pootle 2.0.5\n"
 "X-Poedit-Country: Ukraine\n"
 "X-Poedit-Language: Ukrainian\n"
@@ -38,10 +38,10 @@ msgid ""
 "  <b>%U</b>: Represents multiple URIs"
 msgstr ""
 "<b>Ці спеціальні коди можна використати в командній стрічці:</b>\n"
-" <b>%f</b>: означає назву одного файлу\n"
-" <b>%F</b>: означає назву багатьох файлів\n"
-" <b>%u</b>: означає URI файлу\n"
-" <b>%U</b>: означає багато URI"
+"  <b>%f</b>: означає назву одного файлу\n"
+"  <b>%F</b>: означає назву багатьох файлів\n"
+"  <b>%u</b>: означає URI файлу\n"
+"  <b>%U</b>: означає багато URI"
 
 #: ../data/ui/app-chooser.glade.h:9
 msgid "Choose An Application"
@@ -275,12 +275,12 @@ msgid ""
 "mail addresses."
 msgstr ""
 "Улюблений поштовий клієнт, що буде використаний для створення електронного "
-"листа, коли Ви клацаєте на e-mail адресу"
+"листа, коли Ви клацаєте на e-mail адресу."
 
 #: ../data/ui/preferred-apps.glade.h:9
 msgid "The preferred Web Browser will be used to open hyperlinks."
 msgstr ""
-"Улюблений веб-переглядач, що буде використаний для відкриття гіперпосилань"
+"Улюблений веб-переглядач, що буде використаний для відкриття гіперпосилань."
 
 #: ../data/ui/exec-file.glade.h:1
 msgid "Execute File"
